# Strategy_Game_in_Ascii

./: CMakeLists.txt  GameManagingFunctions.cpp  README.md  main.cpp
Classes/: Exceptions.cpp  Map.cpp  Player.cpp  Tile.cpp
Headers/: GameManagingFunction.h
HeadersForClasses/: Exceptions.h  Map.h  Player.h  Tile.h
SaveFiles/: Interface.txt  Save1.txt  Save2.txt  Save3.txt
Strategy_Game_in_Ascii/: Strategy_Game_in_Ascii.cbp
